<resources>
    <string name="app_name">Bantumi</string>

    <string name="txtPlayer1">Jugador 1</string>
    <string name="txtPlayer2">Jugador 2</string>
    <string name="txtBtnReset">Reset</string>

    <!-- Valores del juego -->
    <integer name="intNumInicialSemillas">4</integer>
    <string name="txtInitialScore">0</string>

    <!-- Mensaje opción sin implementar -->
    <string name="txtSinImplementar">¡No implementado aún!</string>

    <!-- Opciones -->
    <string name="txtReiniciarPartida">Reiniciar</string>
    <string name="txtOpcionGuardar">Guardar Partida</string>
    <string name="txtOpcionRecuperar">Recuperar Partida</string>
    <string name="txtOpcionMejoresResultados">Mejores Resultados</string>

    <!-- Acerca de -->
    <string name="aboutText">Acerca de</string>
    <string name="aboutTitle">¿Cómo se juega?</string>
    <string name="aboutMessage"><p>Cada jugador elige una de sus 6 casillas -que no puede estar vacía-, recoge
        todas las semillas que contenga y las “siembra” una a una en sentido contrario a las agujas del reloj
        en las siguientes casillas del tablero (excepto en el almacén del oponente). Se aplican las siguientes reglas:</p>
        <ul>
            <li>Si la siembra termina en el almacén propio, el jugador vuelve a tener el turno</li>
            <li>Si la siembra termina en una casilla propia que estuviera vacía, se lleva al almacén
                propio la última semilla y las que hubiera en la casilla opuesta del otro jugador</li>
            <li>El juego termina en el momento en que cualquiera de los dos jugadores tenga todas sus
                casillas vacías. Si el contrario dispone de semillas, éstas pasarán al almacén del propietario
                de las casillas</li>
        </ul>
        <p>Gana el jugador que consiga en su almacén el mayor número de semillas</p>
    </string>

    <!-- Preferencias -->
    <string name="preferencesText">Ajustes</string>
    <string name="prefTituloCategoria1">Datos personales</string>
    <string name="prefTituloNombreJugador">Nombre del jugador</string>
    <string name="prefTextoNombreJugador">Pulse para teclear el nombre del jugador</string>
    <string name="prefTituloCategoria2">Ajustes del juego</string>
    <string name="prefTituloCategoria3">Más información…</string>

    <!-- Diálogo Final -->
    <string name="txtDialogoFinalTitulo">Fin del juego</string>
    <string name="txtDialogoFinalPregunta">¿Desea jugar otra partida?</string>

    <!-- Preferencias -->
    <string name="gamePreferencesTitle">Juego</string>
    <string name="gamePreferencesTimer">Mostrar tiempo</string>
    <string name="apperanceSettingsDynamicColor">Usar colores dinámicos</string>
    <string name="apperanceSettingsTitle">Apariencia</string>
    <string name="apperanceSettingsThemeTitle">Tema</string>
    <string name="initialSeedNumberTitle">Numero inicial de semillas</string>
    <string name="nickNameTitle"> Nombre del jugador</string>
    <string name="txtFicheroFalloAlGuardar">Fallo al guardar la partida</string>
    <string name="txtFicheroGuardado">Partida guardada con exito</string>
    <string name="txtDeshacer">Deshacer</string>
    <string name="txtJuegoReiniciado">Juego reiniciado</string>
    <string name="initialSeedSummary">Semillas actuales</string>
    <string name="nickNameSummary">Nombre del jugador</string>
    <string name="themeSummary">Tema actual</string>
    <string name="dynamicColorSummary">Si es posible, utiliza los colores de tu fondo de pantalla para customizar la aplicación. Requiere reiniciar la partida. Requiere Android 12 como mínimo.</string>
    <string name="txtFicheroRecuperado">Partida recuperada!</string>
    <string name="txtFicheroFalloAlRecuperar">Fallo al recuperar la partida</string>
    <string name="highestScoresTitle">Mejores puntuaciones</string>
    <string name="deleteAllSpekeable">Borrar todas las puntuaciones</string>
    <string name="score">Puntuación</string>
    <string name="cpu">CPU</string>
    <string name="txtDialogoBorrarPartidasTitulo">Borrar todas las partidas</string>
    <string name="txtDialogoBorrarPartidasPregunta">¿Desea borrar todas las partidas? Esta acción NO es reversible</string>
    <string name="cancelar">Cancelar</string>
    <string name="borrar">Borrar</string>
    <string name="txtPartidasFueronBorradas">Las partidas fueron borradas</string>
    <string name="txtPartidaFuerBorrada">La partida fue borrada</string>
    <string name="txtDialogoRestaurarTitulo">Restaurar partida</string>
    <string name="txtFicheroNoSeleccionado">No seleccionaste ninguna partida</string>
    <string name="txtReiniciarPartidaAlerta">¿Desea realmente reiniciar la partida?</string>
    <string name="restartApp">Los cambios no se aplicarán hasta reiniciar la partida</string>

</resources>