<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/opcReiniciarPartida"
        android:icon="@drawable/restart_alt_fill0_wght400_grad0_opsz24"
        android:orderInCategory="5"
        android:title="@string/txtReiniciarPartida"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/opcGuardarPartida"
        android:icon="@drawable/save_fill0_wght400_grad0_opsz24"
        android:orderInCategory="10"
        android:title="@string/txtOpcionGuardar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/opcRecuperarPartida"
        android:orderInCategory="15"
        android:title="@string/txtOpcionRecuperar"
        app:showAsAction="never" />

    <item
        android:id="@+id/opcMejoresResultados"
        android:orderInCategory="20"
        android:title="@string/txtOpcionMejoresResultados" />

    <item
        android:id="@+id/opcAjustes"
        android:orderInCategory="100"
        android:title="@string/preferencesText" />

    <item
        android:id="@+id/opcAcercaDe"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="200"
        android:title="@string/aboutText" />

</menu>