<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/gamePreferencesTitle">

        <SwitchPreference
            android:defaultValue="false"
            android:key="displayTimer"
            android:title="@string/gamePreferencesTimer" />
        <EditTextPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="10"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/initialSeedNumberTitle"
            app:key="initialSeedNumber" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/apperanceSettingsTitle">

        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="system"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:title="@string/apperanceSettingsThemeTitle"
            app:key="theme" />

        <SwitchPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/apperanceSettingsDynamicColor"
            app:key="useDinamicColor" />
    </PreferenceCategory>
</PreferenceScreen>