<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcChronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <Chronometer
            android:id="@+id/tvChronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"
            android:textAlignment="center" />
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mvPlayer2"
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvPlayer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/txtPlayer2"
                android:textAlignment="center"
                android:textSize="24sp" />
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/casilla_13"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:maxLines="1"
                android:paddingHorizontal="0dp"
                android:paddingBottom="24dp"
                android:text="@string/txtInitialScore"
                android:textSize="56sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="12"
                android:orientation="vertical">

                <!-- Jugador 2 -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/casilla_12"
                        style="@style/BantumiButton"
                        android:clickable="false" />

                    <Button
                        android:id="@+id/casilla_11"
                        style="@style/BantumiButton"
                        android:clickable="false" />

                    <Button
                        android:id="@+id/casilla_10"
                        style="@style/BantumiButton"
                        android:clickable="false" />

                    <Button
                        android:id="@+id/casilla_09"
                        style="@style/BantumiButton"
                        android:clickable="false" />

                    <Button
                        android:id="@+id/casilla_08"
                        style="@style/BantumiButton"
                        android:clickable="false" />

                    <Button
                        android:id="@+id/casilla_07"
                        style="@style/BantumiButton"
                        android:clickable="false" />

                </LinearLayout>

                <!-- Jugador 1 -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/casilla_00"
                        style="@style/BantumiButton" />

                    <Button
                        android:id="@+id/casilla_01"
                        style="@style/BantumiButton" />

                    <Button
                        android:id="@+id/casilla_02"
                        style="@style/BantumiButton" />

                    <Button
                        android:id="@+id/casilla_03"
                        style="@style/BantumiButton" />

                    <Button
                        android:id="@+id/casilla_04"
                        style="@style/BantumiButton" />

                    <Button
                        android:id="@+id/casilla_05"
                        style="@style/BantumiButton" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/casilla_06"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:maxLines="1"
                android:paddingHorizontal="0dp"
                android:paddingBottom="24dp"
                android:text="@string/txtInitialScore"
                android:textSize="56sp"
                android:textStyle="bold" />

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mvPlayer1"
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvPlayer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/txtPlayer1"
                android:textAlignment="center"
                android:textSize="24sp" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>